--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Door Ring Bell</title>
   <link rel="icon" type="image/png" sizes="100%" href="Ring.png">
   <link rel="stylesheet" href="style.css">
