--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Door Ring Bell</title>
-  <link rel="icon" type="image/png" sizes="100%" href="Ring.png">
+  <link rel="icon" type="image/png" sizes="100%" href="RIng_Ring-.png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
