--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Door Ring Bell</title>
   <link rel="icon" type="image/png" sizes="100%" href="Ring.png">
   <link rel="stylesheet" href="style.css">
+  <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
 </head>
 <body>
   <div class="wrapper">
